[gd_scene load_steps=11 format=3 uid="uid://bivxfmgecxduu"]

[ext_resource type="Script" uid="uid://hgcrwlsixval" path="res://Personajes/Enemigos/guard.gd" id="1_6uv35"]
[ext_resource type="Script" uid="uid://cw6qggc8dl44d" path="res://Personajes/Enemigos/guard_movement.gd" id="2_4vc2f"]
[ext_resource type="Texture2D" uid="uid://daahxq6x1suod" path="res://Personajes/Enemigos/components/field_of_view.png" id="3_ij3td"]
[ext_resource type="Script" uid="uid://bklyx1b4xn2u4" path="res://Personajes/Enemigos/point_light_2d.gd" id="4_3gi1p"]
[ext_resource type="SpriteFrames" uid="uid://dkqlitn2ksv0h" path="res://Personajes/Enemigos/enemigo-1/template_guard_enemy.tres" id="5_vry1q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kfqxu"]
radius = 40.05

[sub_resource type="CircleShape2D" id="CircleShape2D_ax0kc"]
radius = 17.0294

[sub_resource type="Animation" id="Animation_djnj1"]
resource_name = "walk"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}

[sub_resource type="Animation" id="Animation_c836y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7i2fi"]
_data = {
&"RESET": SubResource("Animation_c836y"),
&"walk": SubResource("Animation_djnj1")
}

[node name="Guard" type="CharacterBody2D"]
position = Vector2(50, 206)
script = ExtResource("1_6uv35")

[node name="GuardMovement" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_4vc2f")

[node name="SightRayCast" type="RayCast2D" parent="."]
unique_name_in_owner = true

[node name="InstantDetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="InstantDetectionArea"]
shape = SubResource("CircleShape2D_kfqxu")

[node name="DetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="Light" type="PointLight2D" parent="DetectionArea"]
position = Vector2(160, -19)
scale = Vector2(0.338501, 0.320685)
color = Color(1, 1, 0.796078, 1)
texture = ExtResource("3_ij3td")
script = ExtResource("4_3gi1p")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectionArea"]
position = Vector2(310.552, -128.087)
polygon = PackedVector2Array(-262.552, 85.0874, -261.552, 101.087, -245.552, 114.087, -221.552, 122.087, -95.5524, 164.087, -76.5524, 171.087, -53.5524, 171.087, -53.5524, 172.087, -26.5524, 162.087, -25.5524, 161.087, -9.5524, 152.087, 3.4476, 140.087, 8.4476, 118.087, 9.4476, 32.0874, -1.5524, 9.08743, -6.5524, 4.08743, -19.5524, -3.91257, -34.5524, -13.9126, -36.5524, -14.9126, -62.5524, -19.9126, -86.5524, -12.9126, -88.5524, -9.91257, -168.552, 28.0874, -227.552, 62.0874, -249.552, 75.0874)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = ExtResource("5_vry1q")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ax0kc")

[node name="PlayerAwareness" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -19.0
offset_top = -78.0
offset_right = 21.0
offset_bottom = -38.0

[node name="DebugInfo" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_right = 40.0
offset_bottom = 23.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7i2fi")
}
